logs/ro.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/RO'...
Compiling './lib/python3.5/site-packages/RO/AddCallback.py'...
***   File "./lib/python3.5/site-packages/RO/AddCallback.py", line 148
    raise ValueError, "callFunc %r is not callable" % (callFunc,)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/RO/Alg'...
Listing './lib/python3.5/site-packages/RO/Astro'...
Listing './lib/python3.5/site-packages/RO/Astro/Cnv'...
Listing './lib/python3.5/site-packages/RO/Astro/Sph'...
Listing './lib/python3.5/site-packages/RO/Astro/Tm'...
Listing './lib/python3.5/site-packages/RO/Astro/llv'...
Listing './lib/python3.5/site-packages/RO/Bitmaps'...
Listing './lib/python3.5/site-packages/RO/Comm'...
Listing './lib/python3.5/site-packages/RO/OS'...
Listing './lib/python3.5/site-packages/RO/ParseMsg'...
Listing './lib/python3.5/site-packages/RO/Prefs'...
Listing './lib/python3.5/site-packages/RO/Wdg'...
Compiling './lib/python3.5/site-packages/RO/Wdg/PythonWdg.py'...
***   File "./lib/python3.5/site-packages/RO/Wdg/PythonWdg.py", line 121
    exec script in globs, locs
              ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/RO/procFiles.py'...
***   File "./lib/python3.5/site-packages/RO/procFiles.py", line 164
    raise RuntimeError, "supplied function is not callable"
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/RO-3.6.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
